fix overflow hidden

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -166,5 +166,6 @@
 }
 
 .mapError {
-    height: 100px;
+    height: 200px;
+    /* overflow: visible !important; */
 }
